--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,9 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <base href="$FLUTTER_BASE_HREF">
+  
+  <!-- Google search verification -->
+  <meta name="google-site-verification" content="iAQMAFaf4LOWx04Xaj54_I5vJjMKGVnsPNu87B2bedg" />
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
